unpackaged/main/default/objects/Application_Response__c/Application_Response__c.object-meta.xml
<CustomObject>
    <label>Application Response</label>
    <nameField>
        <displayFormat>Response-{00000}</displayFormat>
        <label>Application Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>