unpackaged/main/default/objects/Application_Response__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>