unpackaged/main/default/objects/Application_Response__c/fields/Application_Answer__c.field-meta.xml
<CustomField>
    <fullName>Application_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Answer</label>
    <referenceTo>Application_Answer__c</referenceTo>
    <relationshipLabel>Application Responses</relationshipLabel>
    <relationshipName>Application_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>